--- a/src/Makefile
+++ b/src/Makefile
@@ -14,5 +14,7 @@ libs:
 	cp mgizapp/bin/bin/mgiza mgizapp/bin/scripts/merge_alignment.py moses/giza
 	-cd moses; ./bjam -j${CORES} --with-giza=$(shell pwd)/moses/giza --with-srilm=$(shell pwd)/srilm
 
+scripts : $(*.java)
+
 %.class: %.java
 	javac -cp . $<
