--- a/.gitignore
+++ b/.gitignore
@@ -13,9 +13,14 @@ src/tree-tagger/lib/
 src/giza-pp/
 src/mgizapp/
 src/moses/giza/
-run/*
+run/preprocess/*
 !run/preprocess/Makefile
-!run/Makefile
-!run/run-experiment.sh
-!run/README
-!run/*/config
+run/*/evaluation/
+run/*/lm/
+run/*/model/
+run/*/steps/
+run/*/training/
+run/*/tuning/
+run/*/OUT.*
+
+
