fix bug in makefile

--- a/run/Makefile
+++ b/run/Makefile
@@ -1,4 +1,4 @@
 
 all:
-	cd ../src; make CORES=$CORES
-	cd preprocess; make CORES=$CORES; make clean
+	cd ../src; make CORES=${CORES}
+	cd preprocess; make CORES=${CORES}; make clean
